# lazycurl

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SHORTCUTS.md  build.zig  build.zig.zon  dev.sh  tvrl_design_document.md
.github/workflows/: ci.yml
archive/libvaxis-original/: build.zig  build.zig.zon
archive/libvaxis-original/src/: main.zig
docs/: porting_step1_source_audit.md
src/: app.rs  main.rs  main.zig  root.zig
src/command/: builder.rs  mod.rs  options.rs  validation.rs
src/execution/: executor.rs  mod.rs  output.rs
src/lazycurl/: app.zig  text_input.zig
src/lazycurl/command/: builder.zig
src/lazycurl/core/: mod.zig  swagger.zig
src/lazycurl/execution/: executor.zig
src/lazycurl/ui/: mod.zig  theme.zig
src/lazycurl/ui/components/: boxed.zig  command_builder.zig  command_display.zig  environment_panel.zig  history_panel.zig  mod.zig  options_panel.zig  output_panel.zig  shortcuts_panel.zig  status_bar.zig  swagger_import_panel.zig  templates_panel.zig  url_container.zig
src/models/: command.rs  environment.rs  mod.rs  template.rs
src/persistence/: mod.rs
src/ui/: event.rs  mod.rs  theme.rs
src/ui/components/: command_builder.rs  command_display.rs  mod.rs  options_panel.rs  output_panel.rs  status_bar.rs  templates_panel.rs  url_container.rs
src/zvrl/: app.zig  text_input.zig
src/zvrl/core/: ids.zig  metadata.zig  mod.zig
src/zvrl/core/models/: command.zig  environment.zig  json.zig  mod.zig  template.zig
src/zvrl/execution/: executor.zig  mod.zig
src/zvrl/persistence/: mod.zig
src/zvrl/ui/: mod.zig  theme.zig
(+25 files in other folders)
