[package]
name = "tvrl"
version = "0.1.0"
edition = "2021"
description = "Terminal Visual Curl - A TUI application for building curl commands"
authors = ["TVRL Team"]

[dependencies]
# Terminal UI
ratatui = "0.24.0"
crossterm = "0.27.0"

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.0"

# Utilities
regex = "1.9.5"
chrono = { version = "0.4.31", features = ["serde"] }
dirs = "5.0.1"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
url = "2.5.0"
urlencoding = "2.1.3"

# Encryption
aes-gcm = "0.10.2"
base64 = "0.21.4"

# Command execution
which = "4.4.0"

[dev-dependencies]
# Development tools
cargo-watch = "8.4.0"
